--- a/ValorEngine.vcxproj.filters
+++ b/ValorEngine.vcxproj.filters
@@ -18,13 +18,8 @@
     <ClCompile Include="valor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="window.cpp">
+    <ClCompile Include="..\apis\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="window.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
